Changed width of contact form and its submit button, added padding to bottom of contact container to fix footer spacing issue

--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -120,6 +120,11 @@ h2 {
     margin: 0 auto;
     display: block;
   }
+
+  .contact-container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 
 .about-me-h1,
@@ -139,5 +144,12 @@ h2 {
 }
 
 .contact-container {
-  max-width: 1000px;
+  max-width: 800px;
+  margin-bottom: 20px;
+}
+
+.contact-submit-button {
+  width: 200px;
+  display: block;
+  margin: 0 auto;
 }
